--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<body>
+header.header>((a.header__logo>img.header__img)+(nav.header__nav.navigation>(ul.navigation__list>(li.navigation__item*3)))+button.header__btn)
+</body>
 </html>
